- Fixed alignment of project repository icon

--- a/components/project/Project.module.css
+++ b/components/project/Project.module.css
@@ -11,7 +11,6 @@
 }
 
 .project_container a {
-  display: block;
   font-weight: bold;
   height: 100%;
 }
@@ -33,6 +32,12 @@
   padding: 5px 10px;
   gap: 50px;
   max-height: 25%;
+}
+
+.project_repository {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .project_description {
